- transformed preference maxuploadsize from text to array (goffy)
- fixed bug block editing (goffy)
- usage of smarty names message_erreur/themeForm to have compatibility with existing themes (goffy)
- adopted modfile.tpl (caused error if used together with blocks) (goffy)
- skip captcha for xoopsUsers (members are skipped in class/download.php getForm)  (goffy)

<h5>2.0 Alpha 1         [2019-01-05]</h5>
<hr>
- moved functions to Utility class (mamba)
- started with conversion to Xmf\Request (mamba)
- made check for upload folders easier (mamba)
- some cosmetic changes related to PSR-2 (mamba)
- shorten class names (mamba)
- added Preloads with autoloader (geekwright/mamba)
- namespaces (mamba)
- class autoloading (mamba)
- short array syntax (mamba)
- Yoda notation (mamba)
- #HEX representation (mamba)
- started conversion to XMF (mamba)
    &nbsp;&nbsp;- updated addInfoBoxLine entries (mamba)
    &nbsp;&nbsp;- displayNavigation(basename(__FILE__))  (mamba)
    &nbsp;&nbsp;- changed to ->displayButton('left') (mamba)
- changed: size of logo in category (mamba)
- changed: button for files for approval only visible if there are actual files to approve (mamba)
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- replaced all hard-coded directory names with dynamic variables (mamba)
- recoded xoops_version.php variables into arrays (mamba)
- renamed install to oninstall (mamba)
- renamed update to onupdate (mamba)
- $adminObject for consistency (mamba)
- removed exit() (mamba)
- moved admin buttons to left: displayButton('left') (mamba)
- added test data import button option (mamba)
- added migrate button option (mamba)
- added Server stats (mamba)
- added Blocks admin (mamba)
- switch admin sites to template based (goffy)

TODO:
- add test data
- do more testing
- update "update.php" file


<h5>1.65 Final [2017/02/02]</h5>
<hr>

- fix error with tree.php (Mage)
- fix error by ref (Mage)